fixed design of home page on mobile

--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -59,3 +59,35 @@
     }
   }
 }
+
+@media only screen and (max-width: $tablet-breakpoint) {
+  .title{
+    color: $color-white;
+    height: 20rem;
+    max-width: 25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: -1rem;
+    margin-bottom: -3rem;
+    overflow-x: hidden;
+    &--primary{
+      font-family: $secondary-font-family;
+      margin: 1rem;
+      margin-left: 1rem;
+      font-size: 2rem;
+      margin-top: -1rem;
+      text-align: center;
+    }
+    &--secondary{
+      width: 15rem;
+      font-family: $primary-font-family;
+      margin-top: -1rem;
+      margin-right: 1rem;
+      margin-left: 1rem;
+      text-align: center;
+      font-size: 1rem;
+    }
+  }
+}
