--- a/src/components/TrialSelection/TrialSelection.scss
+++ b/src/components/TrialSelection/TrialSelection.scss
@@ -41,3 +41,47 @@
     }
   }
 }
+
+
+@media only screen and (max-width: $desktop-breakpoint) {
+  .trial-selection{
+    height: 20rem;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: -10rem;
+    &--tab{
+      height: 16rem;
+      width: 22rem;
+      background-color: $color-black;
+      border-radius: 5rem;
+      border-top: 2px solid $color-white;
+      box-shadow: inset 2px 10px 8px -3px $color-white;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      &__info{
+        color: $color-white;
+        width: 0px;
+        height: 0px;
+        h3{
+          font-size: 0rem;
+        }
+        h5{
+          font-size: 0rem;
+          margin-top: 1rem;
+        }
+      }
+      &__products{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        // border: 1px solid red;
+        width: 100%;
+        height: 25rem;
+      }
+    }
+  }
+}
